update product crud service test